src/main/webapp/assets/css/achievements.css
.achievements-container * {
	display: inline-block;
	vertical-align: top;
}

.achievements-header{
	width: 100%;
	height: 175px;
}

.achievements-icon{
	height: 100%;
	margin-left: 25px;
}

.achievements-header-text {
	width: calc(100% - 200px);
	height: 100%;
}

.achievements-header-title{
	height: 65%;
	width: 100%;
	font-size: 45px;
	padding: 4% 0% 2% 2%;
	color: #F78D2D;
}

.achievements-header-small-text{
	height: 35%;
	width: 100%;
	padding-left: 2%;
	color: #555;
}

#cup {
	padding: 10px 0px 0px 10px;
	width: 165px;
	height: 165px;
}

.achievements-content{
/* 	background-color: red; */
	width: 100%;
	text-align: center;
}
/* achievement-entry */

.achievement-entry{
	width: 275px;
	height: 350px;
/* 	background-color: orange; */
	margin: 25px 20px;
	text-align: center;
}

.achievement-title{
	position: relative;
	width: 75%;
	height: 13%;
	background: linear-gradient(#F78D2D, #FF4516) repeat scroll 0% 0% transparent; 
	border-radius: 10px;
	z-index: 1;
	
	padding-top: 10px;
	display: inline-block;
	color: white;
	font-weight: bold;
	border: 2px solid white;
	font-size: 20px;
}

.achievement-body {
	position: relative;
	top: -8%;	
	height: 65%;
	width: 90%;
/* 	background-color: green; */
	border: 2px solid #BBB;
}

.achievement-body img{
	width: 100%;
	height: 100%;
}

.achievement-points {
	position:relative;
	top: -60px;
	left: -35%;
	height: 50px;
	width: 90px;
	right: 48%;
	background: linear-gradient(#F78D2D, #FF4516) repeat scroll 0% 0% transparent; 
	border-radius: 10px;
	
	padding-top: 10px;
	display: inline-block;
	color: white;
	font-weight: bold;
	border: 2px solid white;
	font-size: 20px;
}

.claim-button{
	position: relative;
	top: -12%;
	background-color: green;
	padding-top: 10px;
	color: white;
	font-weight: bold;
	font-size: 15px;
	
	height: 38px;
	width: 75%;	
	display: inline-block;
	border-radius: 5px;
	cursor: pointer;
}

.progress-bar {
	position: relative;
	top: -12%;
	height: 11%;
	width: 75%;
	text-align: left;
}

.full-bar{
	position: relative;
	height: 38px;
	background-color: #444;
	width: 100%;
	border-radius: 5px;
	background-color: #CFCFCF;
}

.done-bar {
	position: relative;
	top: -38px;
	height: 38px;
	background-color: green;
	width: 5%;
	border-radius: 5px;
	z-index: 1;
	transition: width 2s, height 2s, background-color 2s, transform 2s;
	width: 0px;
}

.awarded {
	background-color: grey;
	cursor: default;
}

.achievement-description {
	width: 70%;
	text-align: justify;
	color: #444;
	line-height: 150%;
}

